@@ -3,13 +3,14 @@ use strict;
 use warnings;
 use Brackup::Util qw(tempfile);
 use POSIX qw(_exit);
+#use Fcntl qw(SEEK_SET);
 
 sub new {
     my ($class, $pchunk) = @_;
 
     my ($destfh, $destfn) = tempfile();
 
-    my $no_fork = 0;  # if true (perhaps on Windows?), then don't fork... do all inline.
+    my $no_fork = $ENV{BRACKUP_NOFORK} || 0;  # if true (perhaps on Windows?), then don't fork... do all inline.
 
     my $pid = $no_fork ? 0 : fork;
     if (!defined $pid) {
@@ -20,37 +21,30 @@ sub new {
     if ($pid) {
         return bless {
             destfn    => $destfn,
+            destfh    => $destfh,
             pid       => $pid,
             running   => 1,
         }, $class;
     }
 
     # child:  encrypt and exit(0)...
-    my $enc = $pchunk->root->encrypt($pchunk->raw_chunkref);
-    my $enc_len = length($enc);
+    $pchunk->root->encrypt($pchunk->raw_chunkref, $destfn);
 
-    binmode($destfh);
-    print $destfh $enc
-        or die "failed to print: $!";
-    close $destfh
-        or die "failed to close: $!";
-
-    my $wrote_size = -s $destfn;
-    unless (defined $wrote_size && $wrote_size == $enc_len) {
-        unless (-e $destfn) {
-            # if the file's gone, that likely means the parent process
-            # already terminated and unlinked our temp file, in
-            # which case we should just exit (with error code), rather
-            # than spewing error messages to stderr.
-            POSIX::_exit(1);
-        }
-        $wrote_size = "<undef>" unless defined $wrote_size;
-        die "size not right (expected $enc_len; got $wrote_size)";
+    unless (-e $destfn) {
+        # if the file's gone, that likely means the parent process
+        # already terminated and unlinked our temp file, in
+        # which case we should just exit (with error code), rather
+        # than spewing error messages to stderr.
+        POSIX::_exit(1);
+    }
+    unless (-s $destfn) {
+        die "No data in encrypted output file";
     }
 
     if ($no_fork) {
         return bless {
             destfn => $destfn,
+            destfh => $destfh,
             pid    => 0,
         }, $class;
     }
@@ -70,16 +64,21 @@ sub chunkref {
     my ($self) = @_;
     die "Still running!" if $self->{running};
 
-    open(my $fh, $self->{destfn})
-        or die "Failed to open gpg temp file $self->{destfn}: $!";
-    binmode($fh);
-    my $data = do { local $/; <$fh>; };
-    die "No data in file" unless length $data;
-    close($fh);
-    unlink($self->{destfn}) or die "couldn't delete destfn";
+#   open(my $fh, $self->{destfn})
+#       or die "Failed to open gpg temp file $self->{destfn}: $!";
+#   binmode($fh);
+#   my $data = do { local $/; <$fh>; };
+#   die "No data in file" unless length $data;
+#   close($fh);
 
-    # unlink
+    my $data = do { local $/; my $fh = $self->{destfh}; <$fh>; };
+    die "No data in file" unless length $data;
+
     return \$data;
+
+    # rewind destfh and return
+#   $self->{destfh}->seek(0, SEEK_SET);
+#   return $self->{destfh};
 }
 
 sub size_on_disk {
